# HeaderMapperPython

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run.py
aliases/: feeding-data-alias.json  stirrer-data-alias.json
enums/: header_match_type.py
models/: mapping_result.py
services/: __init__.py  excel_header_extractor.py  header_matcher.py  schema_loader.py
src/header_mapper/: __init__.py  main.py
src/header_mapper/aliases/: production-data-alias.json  tank-data-alias.json
src/header_mapper/enums/: __init__.py  mapping_action.py
src/header_mapper/models/: __init__.py  column_schema.py  mapping_result.py  matching_config.py  sheet_headers.py
src/header_mapper/services/: ai_matcher.py  excel_header_extractor.py  header_matcher.py  schema_loader.py
