[tool.poetry]
name = "headermapper"
version = "0.1.0"
description = "HeaderMapper implemented in Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "**/*.py", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
python-calamine = ">=0.2.0"
rapidfuzz = ">=3.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
