[tool.poetry]
name = "headermapper"
version = "1.0.0"
description = "HeaderMapper implemented in Python"
authors = ["Tobi <hectorogunsanya@gmail.com>"]
readme = "README.md"
packages = [{include = "header_mapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = ">=3.1.2"
rapidfuzz = ">=3.0.0"
sentence-transformers = ">=2.2.0"
torch = ">=2.0.0,<2.3"
numpy = ">=1.20,<2.0"

[tool.poetry.scripts]
header-mapper = "header_mapper.main:start"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
